--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,11 +12,11 @@ docopt = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.750.0"
-black = {version = "^18.3-alpha.0", allows-prereleases = true}
+black = {version = "^18.3-alpha.0", allow-prereleases = true}
 
 [tool.poetry.scripts]
 batbottg = 'telegram_battery_bot:run_bot'
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0.0"]
 build-backend = "poetry.masonry.api"
